feat: 删除旧文档，新增 Vue3 编译器和运行时核心原理文档，更新项目结构以增强可读性和维护性

--- a/packages/mini-vue/docs/总览.md
+++ b/packages/mini-vue/docs/总览.md
@@ -10,4 +10,12 @@ mini-vue 是一个简化版的 Vue 框架实现，旨在帮助开发者理解 Vu
 - **shared**：工具函数和类型定义，供各模块共享。
 - **vue**：对外暴露的 API 入口及示例。
 
-每个模块均有独立的源码目录，便于理解和维护。 
+每个模块均有独立的源码目录，便于理解和维护。
+
+## 原理文档
+
+为了更好地理解各模块的实现原理，我们提供了详细的原理文档：
+
+- [响应式系统原理](./响应式系统原理.md)：深入解析 Vue3 响应式系统的实现原理
+- [编译器原理](./编译器原理.md)：详细介绍模板编译器的工作原理和优化策略
+- [运行时核心原理](./运行时核心原理.md)：全面阐述虚拟 DOM、渲染器和组件系统的实现机制 
