feat: 在 PluginContext 中新增 configureServer 方法以支持服务器配置；更新文档以反映依赖项递归扫描的变化，修正钩子名称为 resolveId。

--- a/packages/mini-vite/docs/插件系统原理解析.md
+++ b/packages/mini-vite/docs/插件系统原理解析.md
@@ -40,6 +40,7 @@ export interface Plugin {
 
 ```typescript
 export interface PluginContext {
+  configureServer?: (server: ServerContext) => void | Promise<void>;
   resolve: (id: string, importer?: string) => Promise<ResolvedId | null>;
   // 其他上下文方法...
 }
